--- a/apps/firebase-poc/src/user.page.css
+++ b/apps/firebase-poc/src/user.page.css
@@ -1,1 +1,12 @@
 @import "./shared/prototype.css";
+
+.app-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1rem;
+}
+
+main {
+  padding: 1rem;
+}
